--- a/index.html
+++ b/index.html
@@ -7,5 +7,19 @@
   </head>
   <body>
     <h1>Welcome to the Weather App</h1>
+    <footer>
+      coded by
+      <a href="https://github.com/Ze2lucy" target="_blank">Zethu Sithole</a>
+      hosted on
+      <a href="https://github.com/Ze2lucy/Weather-forecast" target="_blank"
+        >GitHub
+      </a>
+      and website hosted
+      <a
+        href="https://forecastweather-app-shecodes.netlify.app/"
+        target="_blank"
+        >on Netlify</a
+      >
+    </footer>
   </body>
 </html>
