Added the HTML to the project

--- a/index.html
+++ b/index.html
@@ -6,9 +6,26 @@
     <title>Weather App</title>
   </head>
   <body>
-    <h1>Welcome to the Weather App</h1>
+    <header>
+      <form>
+        <input type="search" placeholder="Enter a city..." required />
+        <input type="submit" value="Search" />
+      </form>
+    </header>
+    <main>
+      <div>
+        <h1>Cape Town</h1>
+        <p>
+          Saturday 13:45, scattered cloud
+          <br />
+          Humdity: 60%, Wind: 10km/h
+        </p>
+      </div>
+      <div>🌤️ 12°C</div>
+    </main>
+
     <footer>
-      coded by
+      This project was coded by
       <a href="https://github.com/Ze2lucy" target="_blank">Zethu Sithole</a>
       hosted on
       <a href="https://github.com/Ze2lucy/Weather-forecast" target="_blank"
