--- a/index.html
+++ b/index.html
@@ -3,25 +3,25 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="css/styles.css" />
-    <link rel="stylesheet" href="
+    <link rel="stylesheet" href="src/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
-    ">
+
     <title>Weather App</title>
   </head>
   <body>
     <div class="weather-container">
       <header>
-        <form class="search-form">
+        <form class="search-form" id="search-form">
           <input
             type="search"
             placeholder="Enter a city..."
             required
+            id="search-form-input"
             class="search-form-input"
           />
           <input type="submit" value="Search" class="search-form-button" />
@@ -30,14 +30,14 @@
       <main>
         <div class="data-container">
           <div>
-            <h1 class="city-container">Cape Town</h1>
+            <h1 class="city-container" id="weather-app-city">Cape Town</h1>
             <p class="details-container">
               Saturday 13:45, scattered cloud
               <br />
               Humdity: <strong>60%</strong>, Wind: <strong>10km/h</strong>
             </p>
           </div>
-          <di class="weather-icon-container">
+          <div class="weather-icon-container">
             <div class="icon-container">🌤️</div>
             <div class="temp-value-container">12</div>
             <div class="unit-container">°C</div>
@@ -60,5 +60,6 @@
         >
       </footer>
     </div>
+    <script src="index.js"></script>
   </body>
 </html>
