Added the search functionality using the API

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <main>
         <div class="data-container">
           <div>
-            <h1 class="city-container" id="weather-app-city">Cape Town</h1>
+            <h1 class="city-container" id="city"></h1>
             <p class="details-container">
               Saturday 13:45, scattered cloud
               <br />
@@ -40,7 +40,7 @@
           </div>
           <div class="weather-icon-container">
             <div class="icon-container">🌤️</div>
-            <div class="temp-value-container">12</div>
+            <div class="temp-value-container" id="temperature"></div>
             <div class="unit-container">°C</div>
           </div>
         </div>
