Added more weather data

--- a/index.html
+++ b/index.html
@@ -33,9 +33,11 @@
           <div>
             <h1 class="city-container" id="city"></h1>
             <p class="details-container">
-              Saturday 13:45, scattered cloud
+              <span id="time"></span>
+              <span id="description"></span>
               <br />
-              Humdity: <strong>60%</strong>, Wind: <strong>10km/h</strong>
+              Humidity: <strong id="humidity"></strong>, Wind:
+              <strong id="wind-speed"></strong>
             </p>
           </div>
           <div class="weather-icon-container">
