--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@
             </p>
           </div>
           <div class="weather-icon-container">
-            <div class="icon-container">🌤️</div>
+            <div id="icon"></div>
+            <div class="icon-container"></div>
             <div class="temp-value-container" id="temperature"></div>
             <div class="unit-container">°C</div>
           </div>
