Inject the forecast HTML from javaScript

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
             <div class="unit-container">°C</div>
           </div>
         </div>
+        <div class="Weather-forecast" id="forecast"></div>
       </main>
 
       <footer>
